--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,11 @@
 @import './base.css';
+@import './typography.css';
 
+
+#app{
+  margin:0;
+  padding:0;
+}
 .green {
   text-decoration: none;
   color: hsla(160, 100%, 37%, 1);
@@ -22,44 +28,6 @@ h2.button{
   align-items: center;
 }
 
-section.loading {
-  padding: 1rem;
-  text-align: center;
-  font-size: 1.5rem;
-  font-weight: bold;
-  border-radius: 15px;
-  margin: 1rem;
 
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-}
 
-.spinner {
-  width: 2rem;
-  height: 2rem;
-  border-radius: 50%;
-  border: 5px solid #ccc;
-  border-top-color: #333;
-  animation: spin 1s ease infinite;
-}
-@keyframes spin {
-  to {
-    transform: rotate(360deg);
-  }
-}
-@media (hover: hover) {
 
-}
-
-@media (min-width: 1024px) {
-
-  #app {
-    display: grid;
-    grid-template-columns: auto;
-    grid-template-rows: max-content auto;
-    padding: 1rem 1rem;
-    margin: 0;
-  }
-}
