--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -1,100 +1,31 @@
-:root {
-  --orange: #f84800;
-  --gray: #f7f7f7;
-  --muted-gray: #ebebeb;
+:root{
+  --orange:#F84800;
   --black: #424242;
+  --black-secondary: #373737;
   --red: #f7452f;
-  --blue: #427ed1;
+  --blue:#427ED1;
+  --gray:#EBEBEB;
+  --white:#f7f7f7;
 
-  --background-orange: var(--orange);
-  --color-orange: var(--gray);
+  --color-text: var(--black);
+  --color-background: var(--white);
 
-  --background-gray: var(--gray);
-  --color-gray: var(--black);
+  --color-text-light: var(--gray);
 
-  --background-muted-gray: var(--muted-gray);
-  --color-muted-gray: var(--black);
-
-  --color-light: var(--gray);
-  --color-dark: var(--black);
-
-  --background-color-cancel: var(--red);
-  --color-cancel: var(--gray);
-  
-  --background-color-confirm: var(--blue);
-  --color-confirm: var(--gray);
+  --border-radius: 6px;
 }
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-  margin: 0;
-  font-weight: normal;
-}
-
 body {
   margin: 0;
   padding: 0;
-}
-
-input,
-button,
-textarea,
-select,
-option {
-  padding: 8px;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
+  min-height: 100vh;
+  color: var(--color-text);
+  background: var(--color-background);
+  transition: color 0.5s, background-color 0.5s;
+  line-height: 1.6;
+  font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
+    Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   font-size: 15px;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-button {
-  background: #e6e6e6;
-  color: var(--vt-c-black);
-}
-
-button:active {
-  outline: none;
-}
-
-input[type='text'] {
-  border: none;
-  outline: none;
-  color: var(--vt-c-black);
-}
-
-input[type='text']:focus {
-  border: none;
-  outline: none;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-
-select {
-  border: none;
-  outline: none;
-  color: var(--vt-c-black);
-}
-
-fieldset {
-  border: none;
-  outline: none;
 }
