--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,33 +1,3 @@
 @import './base.css';
 @import './typography.css';
-
-
-#app{
-  margin:0;
-  padding:0;
-}
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-}
-
-.btn{
-  display: inline-block;
-  padding: 0.5rem 1rem;
-  border-radius: 0.25rem;
-  transition: 0.4s;
-
-}
-.delete {
-  background: var(--color-cancel);
-}
-h2.button{
-  display:flex;
-  justify-content: space-between;
-  align-items: center;
-}
-
-
-
-
+@import './form.css';
