--- a/src/assets/typography.css
+++ b/src/assets/typography.css
@@ -1,22 +1,7 @@
-
-body {
-  color: var(--black);
-  line-height: 1.6;
-  font-family:
-    Inter,
-    -apple-system,
-    BlinkMacSystemFont,
-    'Segoe UI',
-    Roboto,
-    Oxygen,
-    Ubuntu,
-    Cantarell,
-    'Fira Sans',
-    'Droid Sans',
-    'Helvetica Neue',
-    sans-serif;
-  font-size: 15px;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+h2 {
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: 19px; /* 79.167% */
+  letter-spacing: -0.48px;
 }
