--- a/src/assets/form.css
+++ b/src/assets/form.css
@@ -31,6 +31,13 @@ select {
 input[type="number"]{
   width: 40px;
 }
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 .error{
   color: var(--red);
   font-weight: 600;
