--- a/src/assets/form.css
+++ b/src/assets/form.css
@@ -1,15 +1,16 @@
 fieldset {
-  border: none;
   margin: 5px 0;
   padding: 0;
+  border: none;
 }
+
 fieldset.buttons{
   margin-top: 40px;
 }
+
 label {
   display: block;
   margin-bottom: 5px;
-
   font-size: 16px;
   font-style: normal;
   font-weight: 500;
@@ -19,22 +20,21 @@ label {
 input,
 textarea,
 select {
-    border-radius: var(--border-radius, 6px);
-    border: 1px solid rgba(66, 66, 66, 0.30);
-    background: #f1f1f1;
-    box-shadow: 1px 1px 0px 0px rgba(0, 0, 0, 0.25);
-    padding: 10px 24px;
-    color: var(--black);
+  padding: 10px 24px;
+  background: #f1f1f1;
+  border-radius: var(--border-radius, 6px);
+  border: 1px solid rgba(66 66 66 30%);
+  color: var(--black);
+  box-shadow: 1px 1px 0 0 rgba(0 0 0 25%);
 }
-
 
 input[type="number"]{
   width: 40px;
 }
 
 ul {
-  list-style: none;
-  padding: 0;
   margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
