--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,5 +1,5 @@
-@import './base.css';
-@import './typography.css';
-@import './form.css';
-@import './animations.css';
-@import './helpers.css';
+@import url('./base.css');
+@import url('./typography.css');
+@import url('./form.css');
+@import url('./animations.css');
+@import url('./helpers.css');
