--- a/src/assets/typography.css
+++ b/src/assets/typography.css
@@ -1,6 +1,4 @@
-:root{
-  --step--2: clamp(0.78rem, calc(0.77rem + 0.03vw), 0.80rem);
-  --step--1: clamp(0.94rem, calc(0.92rem + 0.11vw), 1.00rem);
+:root {
   --step-0: clamp(1.13rem, calc(1.08rem + 0.22vw), 1.25rem);
   --step-1: clamp(1.35rem, calc(1.28rem + 0.37vw), 1.56rem);
   --step-2: clamp(1.62rem, calc(1.50rem + 0.58vw), 1.95rem);
@@ -8,19 +6,20 @@
   --step-4: clamp(2.33rem, calc(2.08rem + 1.25vw), 3.05rem);
   --step-5: clamp(2.80rem, calc(2.45rem + 1.77vw), 3.82rem);
 
-  font-size: var(--step--1);
+  font-size: var(--step-0);
   line-height: 1.6;
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
     Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  text-rendering: optimizeLegibility;
+  text-rendering: optimizelegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
 h2 {
-  font-size: 24px;
+  margin:0;
+  font-size: var(--step-1);
   font-style: normal;
   font-weight: 500;
-  line-height: 19px; /* 79.167% */
+  line-height: 19px;
   letter-spacing: -0.48px;
-  margin:0;
 }
