--- a/src/assets/animations.css
+++ b/src/assets/animations.css
@@ -1,7 +1,7 @@
 .spinner{
     width: 24px;
     height: 24px;
-    border: 2px solid rgba(0 0 0 1%);
+    border: 2px solid rgba(0 0 0 / 1%);
     border-left-color: var(--black);
     border-radius: 50%;
     animation: spin 1s linear infinite;
