--- a/src/assets/form.css
+++ b/src/assets/form.css
@@ -1,7 +1,18 @@
 fieldset {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: min-content;
+  gap: 12px;
   margin: 5px 0;
   padding: 0;
   border: none;
+
+  & fieldset {
+    display: flex;
+    flex-direction: column;
+    gap: 0;
+  }
 }
 
 fieldset.buttons{
@@ -23,9 +34,9 @@ select {
   padding: 10px 24px;
   background: #f1f1f1;
   border-radius: var(--border-radius, 6px);
-  border: 1px solid rgba(66 66 66 30%);
+  border: 1px solid rgba(66 66 66 / 30%);
   color: var(--black);
-  box-shadow: 1px 1px 0 0 rgba(0 0 0 25%);
+  box-shadow: 1px 1px 0 0 rgba(0 0 0 / 25%);
 }
 
 input[type="number"]{
@@ -37,4 +48,3 @@ ul {
   padding: 0;
   list-style: none;
 }
-
